v7.13.0
  - Fix: No runner notification can see managers only
  - Ability to cancel all builds in commit at once
  - Improved Lint stability
  - Disable colors in rake tasks automatically (if IO is not a TTY)

v7.12.1
  - Runner without tag should pick builds without tag only
  - Explicit error in the GitLab when commit not found.
  - Fix: lint with relative subpath
  - Update webhook example
  - Improved Lint stability
  - Add warning when .gitlab-ci.yml not found
  - Add one more validation rule for .gitlab-ci.yml

v7.12.0
  - Endless scroll on the dashboard
  - Add notification if there are no runners
  - Fix pagination on dashboard
  - Remove ID column from runners list in the admin area
  - Increase default timeout for builds to 60 minutes
  - Using .gitlab-ci.yml file instead of jobs
  - Link to the runner from the build page for admin user
  - Ability to set secret variables for runner
  - Dont retry build when push same commit in same ref twice 
  - Admin area: show amount of runners with last contact less than a minute ago
  - Fix re-adding project with the same name but different gitlab_id
  - Implementation of Lint (.gitlab-ci.yml validation tool)
  - Updated rails to 4.1.11
  - API fix: project create call
  - Link to web-editor with .gitlab-ci.yml
  - Updated examples in the documentation

v7.11.0
  - Deploy Jobs API calls
  - Projects search on dashboard page
  - Improved runners page
  - Running and Pending tabs on admin builds page
  - Fix [ci skip] tag, so you can skip CI triggering now
  - Add HipChat notifications
  - Clean up project advanced settings.
  - Add a GitLab project path parameter to the project API
  - Remove projects IDs from dashboard
  - UI fix: Remove page headers from the admin area
  - Improve Email templates
  - Add backup/restore utility
  - Coordinator stores information(version, platform, revision, etc.) about runners.
  - Fixed pagination on dashboard
  - Public accessible build and commit pages of public projects