@@ -205,8 +205,11 @@ class Commit < ActiveRecord::Base
   end
 
   def coverage
-    if project.coverage_enabled? && builds.size > 0
-      builds.last.coverage
+    if project.coverage_enabled? && builds.count(:all) > 0
+      coverage_array = builds.map(&:coverage).compact
+      if coverage_array.size > 1
+        coverage_array.reduce(:+) / coverage_array.size
+      end
     end
   end
 
